@@ -17,7 +17,6 @@
 
 package org.apache.kafka.connect.runtime.isolation;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -42,7 +41,7 @@ public interface SamplingTestPlugin {
      * @return All known instances of this class, including this instance.
      */
     default List<SamplingTestPlugin> allInstances() {
-        return Collections.singletonList(this);
+        return List.of(this);
     }
 
     /**
@@ -50,7 +49,7 @@ public interface SamplingTestPlugin {
      * This should only return direct children, and not reference this instance directly
      */
     default Map<String, SamplingTestPlugin> otherSamples() {
-        return Collections.emptyMap();
+        return Map.of();
     }
 
     /**
